style: update minimize button icon.

--- a/audio.htm
+++ b/audio.htm
@@ -2191,7 +2191,7 @@
         <div class="fp-header" style="width: 100%;">
             <button class="icon-btn-ghost" onclick="toggleFullPlayer()"
                 style="gap: 8px; padding: 8px 16px; width: auto; border-radius: 20px; background: rgba(255,255,255,0.1);">
-                <i data-lucide="chevron-down"></i>
+                <i data-lucide="arrow-down"></i>
                 <span class="font-mono text-sm" style="color: var(--text-main);">Minimize</span>
             </button>
             <span class="font-mono text-sm text-muted">NOW PLAYING</span>
