--- a/ds/dbmsend.htm
+++ b/ds/dbmsend.htm
@@ -132,14 +132,15 @@
         }
 
         .example-box {
-            background-color: #f9f9f9;
-            border: 1px solid #ddd;
+            background-color: #2d2d2d;
+            color: #ccc;
+            border: 1px solid #2c3e50;
             padding: 15px;
             margin: 15px 0;
             border-radius: 4px;
             font-family: 'Courier New', monospace;
             font-size: 0.95rem;
-            overflow-x: auto;
+            white-space: pre-wrap;
         }
 
         .example-title {
@@ -454,6 +455,7 @@
             }
         }
     </style>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -970,36 +972,36 @@
 
             <div class="example-box">
                 <div class="example-title">Solution Approach:</div>
-                <p>-- 1. Students with 'A' in more than 3 courses<br />
-                    SELECT s.id, s.name, COUNT(*) as a_count<br />
-                    FROM Students s<br />
-                    JOIN Enrollments e ON s.id = e.student_id<br />
-                    WHERE e.grade = 'A'<br />
-                    GROUP BY s.id, s.name<br />
-                    HAVING COUNT(*) > 3;<br /><br />
+                <pre><code class="language-sql">-- 1. Students with 'A' in more than 3 courses
+SELECT s.id, s.name, COUNT(*) as a_count
+FROM Students s
+JOIN Enrollments e ON s.id = e.student_id
+WHERE e.grade = 'A'
+GROUP BY s.id, s.name
+HAVING COUNT(*) > 3;
 
-                    -- 2. Department with highest average GPA<br />
-                    SELECT s.dept, AVG(<br />
-                    CASE e.grade<br />
-                    WHEN 'A' THEN 4.0 WHEN 'B' THEN 3.0<br />
-                    WHEN 'C' THEN 2.0 WHEN 'D' THEN 1.0<br />
-                    ELSE 0 END) as avg_gpa<br />
-                    FROM Students s<br />
-                    JOIN Enrollments e ON s.id = e.student_id<br />
-                    GROUP BY s.dept<br />
-                    ORDER BY avg_gpa DESC<br />
-                    LIMIT 1;<br /><br />
+-- 2. Department with highest average GPA
+SELECT s.dept, AVG(
+CASE e.grade
+WHEN 'A' THEN 4.0 WHEN 'B' THEN 3.0
+WHEN 'C' THEN 2.0 WHEN 'D' THEN 1.0
+ELSE 0 END) as avg_gpa
+FROM Students s
+JOIN Enrollments e ON s.id = e.student_id
+GROUP BY s.dept
+ORDER BY avg_gpa DESC
+LIMIT 1;
 
-                    -- 3. Prerequisite chain (assuming Prereqs table)<br />
-                    WITH RECURSIVE prereq_chain AS (<br />
-                    SELECT course_code, prereq_code, 1 as level<br />
-                    FROM Prerequisites WHERE course_code = 'C101'<br />
-                    UNION ALL<br />
-                    SELECT p.course_code, p.prereq_code, pc.level + 1<br />
-                    FROM Prerequisites p<br />
-                    JOIN prereq_chain pc ON p.course_code = pc.prereq_code<br />
-                    )<br />
-                    SELECT * FROM prereq_chain ORDER BY level;</p>
+-- 3. Prerequisite chain (assuming Prereqs table)
+WITH RECURSIVE prereq_chain AS (
+SELECT course_code, prereq_code, 1 as level
+FROM Prerequisites WHERE course_code = 'C101'
+UNION ALL
+SELECT p.course_code, p.prereq_code, pc.level + 1
+FROM Prerequisites p
+JOIN prereq_chain pc ON p.course_code = pc.prereq_code
+)
+SELECT * FROM prereq_chain ORDER BY level;</code></pre>
             </div>
         </div>
 
@@ -1593,6 +1595,12 @@
                 });
             });
         </script>
+        <footer>
+            <p>Justin-docs • Database Systems Comprehensive Review</p>
+        </footer>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-sql.min.js"></script>
 </body>
 
 </html>
