--- a/ds/dbms.htm
+++ b/ds/dbms.htm
@@ -155,6 +155,13 @@
             white-space: pre-wrap;
         }
 
+        /* Override Prism defaults to remove scrollbars */
+        pre[class*="language-"] {
+            overflow: visible !important;
+            white-space: pre-wrap !important;
+            word-wrap: break-word !important;
+        }
+
         .table-container {
             margin: 1rem 0;
             overflow-x: auto;
