--- a/ds/dbms4.htm
+++ b/ds/dbms4.htm
@@ -120,9 +120,8 @@
 
         /* Code and examples */
         .code-block {
-            background-color: #2d2d2d;
-            /* Prism Tomorrow background */
-            color: #ccc;
+            background-color: #f9f9f9;
+            color: #000;
             border-left: 4px solid #2c3e50;
             padding: 15px;
             margin: 20px 0;
@@ -130,13 +129,14 @@
             font-size: 0.95rem;
             white-space: pre-wrap;
             border-radius: 5px;
+            border: 1px solid #ddd;
         }
 
-        /* Override Prism defaults to remove scrollbars */
-        pre[class*="language-"] {
-            overflow: visible !important;
+        /* Ensure pre content wraps */
+        pre {
             white-space: pre-wrap !important;
             word-wrap: break-word !important;
+            margin: 0;
         }
 
         .example {
@@ -284,7 +284,6 @@
             }
         }
     </style>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -1668,14 +1667,9 @@
     </main>
 
     <footer>
-        <p>Justin-docs • Introduction to NoSQL Concepts and Architectural Patterns • 2024 Scheme • Handbook 2025</p>
+        <p>Justin-docs • Database Systems Module 4 • 2024 Scheme • Handbook 2025</p>
         <p>Author: Justin • Comprehensive Database Module Reference</p>
     </footer>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-sql.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-javascript.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-cypher.min.js"></script>
 </body>
 
 </html>
