--- a/ds/dbms.htm
+++ b/ds/dbms.htm
@@ -145,9 +145,9 @@
         }
 
         .code-block {
-            background-color: #2d2d2d;
-            color: #ccc;
-            border: 1px solid #2c3e50;
+            background-color: #f9f9f9;
+            color: #000;
+            border: 1px solid #ddd;
             padding: 0.75rem;
             margin: 0.75rem 0;
             font-family: 'Courier New', monospace;
@@ -155,11 +155,11 @@
             white-space: pre-wrap;
         }
 
-        /* Override Prism defaults to remove scrollbars */
-        pre[class*="language-"] {
-            overflow: visible !important;
+        /* Ensure pre content wraps */
+        pre {
             white-space: pre-wrap !important;
             word-wrap: break-word !important;
+            margin: 0;
         }
 
         .table-container {
@@ -227,7 +227,6 @@
             }
         }
     </style>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -1269,8 +1268,7 @@
                 application as required by the course objectives and assessment methods.</p>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-sql.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
