--- a/ds/dbms1.htm
+++ b/ds/dbms1.htm
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 
@@ -120,9 +121,9 @@
         }
 
         .example-box {
-            background-color: #2d2d2d;
-            color: #ccc;
-            border: 1px solid #2c3e50;
+            background-color: #f9f9f9;
+            color: #000;
+            border: 1px solid #ddd;
             padding: 15px;
             margin: 15px 0;
             border-radius: 4px;
@@ -131,11 +132,11 @@
             white-space: pre-wrap;
         }
 
-        /* Override Prism defaults to remove scrollbars */
-        pre[class*="language-"] {
-            overflow: visible !important;
+        /* Ensure pre content wraps */
+        pre {
             white-space: pre-wrap !important;
             word-wrap: break-word !important;
+            margin: 0;
         }
 
         .example-title {
@@ -255,7 +256,6 @@
             }
         }
     </style>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
 </head>
 
 <body>
