--- a/ds/dbms3.htm
+++ b/ds/dbms3.htm
@@ -131,9 +131,9 @@
         }
 
         .example-box {
-            background-color: #2d2d2d;
-            color: #ccc;
-            border: 1px solid #2c3e50;
+            background-color: #f9f9f9;
+            color: #000;
+            border: 1px solid #ddd;
             padding: 15px;
             margin: 15px 0;
             border-radius: 4px;
@@ -142,11 +142,11 @@
             white-space: pre-wrap;
         }
 
-        /* Override Prism defaults to remove scrollbars */
-        pre[class*="language-"] {
-            overflow: visible !important;
+        /* Ensure pre content wraps */
+        pre {
             white-space: pre-wrap !important;
             word-wrap: break-word !important;
+            margin: 0;
         }
 
         .example-title {
@@ -348,7 +348,6 @@
             }
         }
     </style>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -1382,8 +1381,21 @@ Result: {A}⁺ = {A, B, C, D}</code></pre>
         <p>Justin-docs • Database Module 3</p>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-sql.min.js"></script>
+    <style>
+        /* Added for .example-box as per instruction */
+        .example-box {
+            background-color: #ffffff;
+            /* Light theme background */
+            color: #000000;
+            /* Black text */
+            border: 1px solid #e0e0e0;
+            border-radius: 8px;
+            padding: 15px;
+            margin-bottom: 20px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+        }
+    </style>
+
     <script>
         // Simple script to enhance the document experience
         document.addEventListener('DOMContentLoaded', function () {
