--- a/ds/dbms1.htm
+++ b/ds/dbms1.htm
@@ -565,10 +565,10 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                     <line x1="250" y1="120" x2="310" y2="120" stroke="#7e57c2" stroke-width="2" />
 
                     <!-- Relationship -->
-                    <path d="M500,100 L550,80 L600,100 L550,120 Z" fill="#fff3e0" stroke="#f57c00" stroke-width="3" />
-                    <text x="550" y="105" text-anchor="middle" font-size="16" font-weight="bold"
+                    <path d="M500,120 L550,90 L600,120 L550,150 Z" fill="#fff3e0" stroke="#f57c00" stroke-width="3" />
+                    <text x="550" y="125" text-anchor="middle" font-size="16" font-weight="bold"
                         fill="#e65100">Enrolls</text>
-                    <text x="550" y="125" text-anchor="middle" font-size="14" fill="#bf360c">Relationship</text>
+                    <text x="550" y="145" text-anchor="middle" font-size="14" fill="#bf360c">Relationship</text>
 
                     <!-- Another Entity -->
                     <rect x="650" y="80" width="150" height="80" rx="5" ry="5" fill="#fce4ec" stroke="#c2185b"
@@ -578,7 +578,7 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                     <text x="725" y="150" text-anchor="middle" font-size="14" fill="#880e4f">Entity Type</text>
 
                     <!-- Connecting line -->
-                    <line x1="600" y1="100" x2="650" y2="100" stroke="#7e57c2" stroke-width="2" />
+                    <line x1="600" y1="120" x2="650" y2="120" stroke="#7e57c2" stroke-width="2" />
 
                     <!-- Legend -->
                     <rect x="50" y="200" width="700" height="90" rx="5" ry="5" fill="#f5f5f5" stroke="#bdbdbd"
@@ -613,73 +613,80 @@ UPDATE Student SET GPA = 3.9 WHERE StudentID = 101;</code></pre>
                         Types in ER Model</text>
 
                     <!-- Simple Attribute -->
-                    <rect x="50" y="60" width="200" height="80" rx="5" ry="5" fill="#e3f2fd" stroke="#1976d2"
+                    <rect x="50" y="60" width="100" height="50" rx="5" ry="5" fill="#e3f2fd" stroke="#1976d2"
                         stroke-width="2" />
-                    <text x="150" y="90" text-anchor="middle" font-size="16" font-weight="bold"
-                        fill="#1565c0">EMPLOYEE</text>
+                    <text x="100" y="90" text-anchor="middle" font-size="14" font-weight="bold"
+                        fill="#1565c0">STUDENT</text>
 
-                    <circle cx="150" cy="130" r="30" fill="#e8f5e9" stroke="#388e3c" stroke-width="2" />
-                    <text x="150" y="135" text-anchor="middle" font-size="14" font-weight="bold"
+                    <line x1="100" y1="110" x2="100" y2="140" stroke="#7e57c2" stroke-width="2" />
+                    <circle cx="100" cy="165" r="25" fill="#e8f5e9" stroke="#388e3c" stroke-width="2" />
+                    <text x="100" y="170" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#2e7d32">EmpID</text>
-                    <line x1="150" y1="100" x2="150" y2="100" stroke="#7e57c2" stroke-width="2" />
 
-                    <text x="150" y="180" text-anchor="middle" font-size="14" fill="#5e35b1">Simple (Atomic)
+                    <text x="100" y="250" text-anchor="middle" font-size="14" fill="#5e35b1">Simple (Atomic)
                         Attribute</text>
 
                     <!-- Composite Attribute -->
-                    <rect x="300" y="60" width="200" height="80" rx="5" ry="5" fill="#e3f2fd" stroke="#1976d2"
+                    <rect x="250" y="60" width="100" height="50" rx="5" ry="5" fill="#e3f2fd" stroke="#1976d2"
                         stroke-width="2" />
-                    <text x="400" y="90" text-anchor="middle" font-size="16" font-weight="bold"
-                        fill="#1565c0">EMPLOYEE</text>
+                    <text x="300" y="90" text-anchor="middle" font-size="14" font-weight="bold"
+                        fill="#1565c0">STUDENT</text>
 
-                    <ellipse cx="400" cy="140" rx="50" ry="30" fill="#fff3e0" stroke="#f57c00" stroke-width="2" />
-                    <text x="400" y="145" text-anchor="middle" font-size="14" font-weight="bold"
+                    <line x1="300" y1="110" x2="300" y2="135" stroke="#7e57c2" stroke-width="2" />
+
+                    <!-- Main composite attribute -->
+                    <ellipse cx="300" cy="150" rx="40" ry="20" fill="#fff3e0" stroke="#f57c00" stroke-width="2" />
+                    <text x="300" y="155" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#e65100">Name</text>
 
-                    <circle cx="370" cy="140" r="15" fill="#fce4ec" stroke="#c2185b" stroke-width="1" />
-                    <text x="370" y="145" text-anchor="middle" font-size="10" fill="#ad1457">First</text>
+                    <!-- Sub attributes lines -->
+                    <line x1="300" y1="170" x2="250" y2="200" stroke="#7e57c2" stroke-width="1" />
+                    <line x1="300" y1="170" x2="300" y2="200" stroke="#7e57c2" stroke-width="1" />
+                    <line x1="300" y1="170" x2="350" y2="200" stroke="#7e57c2" stroke-width="1" />
 
-                    <circle cx="400" cy="140" r="15" fill="#fce4ec" stroke="#c2185b" stroke-width="1" />
-                    <text x="400" y="145" text-anchor="middle" font-size="10" fill="#ad1457">Middle</text>
+                    <!-- Sub attributes -->
+                    <ellipse cx="250" cy="210" rx="20" ry="12" fill="#fce4ec" stroke="#c2185b" stroke-width="1" />
+                    <text x="250" y="214" text-anchor="middle" font-size="9" fill="#ad1457">First</text>
 
-                    <circle cx="430" cy="140" r="15" fill="#fce4ec" stroke="#c2185b" stroke-width="1" />
-                    <text x="430" y="145" text-anchor="middle" font-size="10" fill="#ad1457">Last</text>
+                    <ellipse cx="300" cy="210" rx="20" ry="12" fill="#fce4ec" stroke="#c2185b" stroke-width="1" />
+                    <text x="300" y="214" text-anchor="middle" font-size="9" fill="#ad1457">Mid</text>
 
-                    <line x1="400" y1="100" x2="400" y2="110" stroke="#7e57c2" stroke-width="2" />
+                    <ellipse cx="350" cy="210" rx="20" ry="12" fill="#fce4ec" stroke="#c2185b" stroke-width="1" />
+                    <text x="350" y="214" text-anchor="middle" font-size="9" fill="#ad1457">Last</text>
 
-                    <text x="400" y="180" text-anchor="middle" font-size="14" fill="#5e35b1">Composite Attribute</text>
+                    <text x="300" y="250" text-anchor="middle" font-size="14" fill="#5e35b1">Composite Attribute</text>
 
                     <!-- Multivalued Attribute -->
-                    <rect x="550" y="60" width="200" height="80" rx="5" ry="5" fill="#e3f2fd" stroke="#1976d2"
+                    <rect x="450" y="60" width="100" height="50" rx="5" ry="5" fill="#e3f2fd" stroke="#1976d2"
                         stroke-width="2" />
-                    <text x="650" y="90" text-anchor="middle" font-size="16" font-weight="bold"
-                        fill="#1565c0">EMPLOYEE</text>
+                    <text x="500" y="90" text-anchor="middle" font-size="14" font-weight="bold"
+                        fill="#1565c0">STUDENT</text>
 
-                    <circle cx="650" cy="140" r="30" fill="#e8f5e9" stroke="#388e3c" stroke-width="3" />
-                    <circle cx="650" cy="140" r="25" fill="#fff3e0" stroke="#f57c00" stroke-width="2" />
-                    <text x="650" y="145" text-anchor="middle" font-size="14" font-weight="bold"
+                    <line x1="500" y1="110" x2="500" y2="140" stroke="#7e57c2" stroke-width="2" />
+
+                    <ellipse cx="500" cy="165" rx="35" ry="25" fill="#e8f5e9" stroke="#388e3c" stroke-width="2" />
+                    <ellipse cx="500" cy="165" rx="30" ry="20" fill="#fff3e0" stroke="#f57c00" stroke-width="1" />
+                    <text x="500" y="170" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#e65100">Phones</text>
 
-                    <line x1="650" y1="100" x2="650" y2="110" stroke="#7e57c2" stroke-width="2" />
-
-                    <text x="650" y="180" text-anchor="middle" font-size="14" fill="#5e35b1">Multivalued
+                    <text x="500" y="250" text-anchor="middle" font-size="14" fill="#5e35b1">Multivalued
                         Attribute</text>
 
                     <!-- Derived Attribute -->
-                    <rect x="200" y="210" width="150" height="60" rx="5" ry="5" fill="#e3f2fd" stroke="#1976d2"
+                    <rect x="650" y="60" width="100" height="50" rx="5" ry="5" fill="#e3f2fd" stroke="#1976d2"
                         stroke-width="2" />
-                    <text x="275" y="240" text-anchor="middle" font-size="14" font-weight="bold"
-                        fill="#1565c0">EMPLOYEE</text>
+                    <text x="700" y="90" text-anchor="middle" font-size="14" font-weight="bold"
+                        fill="#1565c0">STUDENT</text>
 
-                    <circle cx="350" cy="240" r="25" fill="#e8f5e9" stroke="#388e3c" stroke-width="2"
+                    <line x1="700" y1="110" x2="700" y2="140" stroke="#7e57c2" stroke-width="2"
+                        style="stroke-dasharray: 4, 2;" />
+
+                    <ellipse cx="700" cy="165" rx="30" ry="20" fill="#e8f5e9" stroke="#388e3c" stroke-width="2"
                         stroke-dasharray="5,3" />
-                    <text x="350" y="245" text-anchor="middle" font-size="12" font-weight="bold"
+                    <text x="700" y="170" text-anchor="middle" font-size="12" font-weight="bold"
                         fill="#2e7d32">Age</text>
 
-                    <line x1="275" y1="240" x2="325" y2="240" stroke="#7e57c2" stroke-width="2"
-                        stroke-dasharray="5,3" />
-
-                    <text x="275" y="280" text-anchor="middle" font-size="14" fill="#5e35b1">Derived Attribute</text>
+                    <text x="700" y="250" text-anchor="middle" font-size="14" fill="#5e35b1">Derived Attribute</text>
                 </svg>
             </div>
 
